--- a/client/style.css
+++ b/client/style.css
@@ -1,129 +1,142 @@
-*, *::after, *::after{
-    box-sizing: border-box;
+*,
+*::after,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
 }
 
 * {
   margin: 0;
   padding: 0;
-  font-family:  'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
 }
 
-:root{
+:root {
   /* Colors */
-    --highlightColor: aqua;
-    --overlayColor: rgba(128, 128, 128, 0.7);
+  --highlightColor: aqua;
+  --overlayColor: rgba(128, 128, 128, 0.7);
 }
 
+body {
+  image-rendering: pixelated;
+}
 
 #game-container {
-  height: 250px;
-  margin: auto;
-  margin-top: 20px;
-  transform-origin: top center;
-  aspect-ratio: 2 / 1;
-
-  border: 1px solid black;
+  position: relative;
+  height: 720px;
+  aspect-ratio: 16 / 9;
+  background-image: url("./graphics/background.png");
+  background-repeat: no-repeat;
+  transform-origin: top left;
+}
+#game-container::after {
+  content: " ";
+  background-image: url("./graphics/foreground.png");
+  height: 57px;
+  width: 1280px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
-.soundContainer{
+.soundContainer {
   position: absolute;
   top: -20px;
 }
 
 /* --------------------------- start state screen --------------------------- */
-.startContainer{
+.startContainer {
   position: absolute;
   width: 100%;
-
 }
 
-.startContainer *{
+.startContainer * {
   text-align: center;
 }
-.startContainer h1{
-  margin-top:50px;
+.startContainer h1 {
+  margin-top: 50px;
 }
 
-.menuContainer{
-  margin-top:80px;
+.menuContainer {
+  margin-top: 80px;
 }
 
-.menuContainer *{
-  margin-top:10px;
+.menuContainer * {
+  margin-top: 10px;
 }
 
-.chosen{
-  color:var(--highlightColor);
+.chosen {
+  color: var(--highlightColor);
 }
 
 /* ------------------------------- play state ------------------------------- */
 
-.paddle{
-  --x:225;
+.paddle {
+  --x: 225;
 
   position: absolute;
   background-color: black;
   bottom: 5px;
-  left: calc(var(--x)*1px);
+  left: calc(var(--x) * 1px);
 
   width: 50px;
   height: 10px;
 }
-.ball{
+.ball {
   --x: 250;
   --y: 227;
 
-    background-color: black;
-    position: absolute;
-    top: calc(var(--y)*1px);
-    left: calc(var(--x)*1px);
+  background-color: black;
+  position: absolute;
+  top: calc(var(--y) * 1px);
+  left: calc(var(--x) * 1px);
 
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
 }
 
-.healthContainer{
-  position:absolute;
+.healthContainer {
+  position: absolute;
   top: 5px;
 }
 
-.scoreContainer{
-  position:absolute;
+.scoreContainer {
+  position: absolute;
   top: 25px;
 }
 /* ------------------------------- pause state ------------------------------ */
-.hide{
+.hide {
   visibility: hidden;
 }
-.pauseContainer{
+.pauseContainer {
   position: absolute;
   width: 90%;
   height: 90%;
   top: 5%;
   left: 5%;
   text-align: center;
-  background-color:var(--overlayColor);
+  background-color: var(--overlayColor);
 }
-.pauseContainer *{
+.pauseContainer * {
   margin-top: 100px;
 }
 
 /* ----------------------------- game over state ---------------------------- */
 
-.gameOverContainer{
+.gameOverContainer {
   position: absolute;
   width: 90%;
   height: 90%;
   top: 5%;
   left: 5%;
   text-align: center;
-  background-color:var(--overlayColor);
+  background-color: var(--overlayColor);
 }
 
-.gameOverContainer *{
+.gameOverContainer * {
   text-align: center;
 }
-.gameOverContainer h1{
-  margin-top:50px;
+.gameOverContainer h1 {
+  margin-top: 50px;
 }
