--- a/client/style.css
+++ b/client/style.css
@@ -76,27 +76,27 @@ body {
 /* ------------------------------- play state ------------------------------- */
 
 .paddle {
-  --x: 225;
+  --x: 0;
 
   position: absolute;
-  background-color: black;
-  bottom: 5px;
+  background-image: url("../graphics/paddle.png");
+  bottom: 28px;
   left: calc(var(--x) * 1px);
 
-  width: 50px;
-  height: 10px;
+  width: 200px;
+  height: 42px;
 }
 .ball {
-  --x: 250;
-  --y: 227;
+  --x: 0;
+  --y: 0;
 
-  background-color: black;
   position: absolute;
+  background-image: url("../graphics/ball.png");
   top: calc(var(--y) * 1px);
   left: calc(var(--x) * 1px);
 
-  width: 6px;
-  height: 6px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 }
 
