--- a/client/style.css
+++ b/client/style.css
@@ -138,12 +138,31 @@ body {
   flex-wrap: wrap;
 }
 .tile {
-  --xPos: 0; 
+  --xPos: 0;
   --yPos: 0;
   background-position: calc(var(--xPos) * 1px) calc(var(--yPos) * -1px);
   width: 40px;
   height: 40px;
 }
+/* ------------------------------- storyline ------------------------------ */
+.storyContainer {
+  position: absolute;
+  width: 1000px;
+  height: 431px;
+  bottom: 100px;
+  left: 140px;
+  z-index: 5;
+
+  background-image: url("../graphics/dialogbox.png");
+}
+#storyText {
+  margin-top: 300px;
+  margin-left: 15px;
+  margin-right: 15px;
+  line-height: 1.5;
+  font-size: 14px;
+}
+
 /* ------------------------------- pause state ------------------------------ */
 .hide {
   visibility: hidden;
