--- a/src/style.css
+++ b/src/style.css
@@ -162,6 +162,13 @@ div {
   width: 40px;
   height: 40px;
 }
+.pow {
+  --y: 0;
+
+  position: absolute;
+  background-image: url("../graphics/pow.png");
+  top: calc(var(--y) * 1px);
+}
 /* ------------------------------- storyline ------------------------------ */
 .storyContainer {
   position: absolute;
