--- a/src/style.css
+++ b/src/style.css
@@ -103,7 +103,7 @@ div {
   position: absolute;
   background-image: url("../graphics/paddle.png");
   bottom: 28px;
-  left: calc(var(--x) * 1px);
+  transform: translate(calc(var(--x) * 1px));
 
   width: 200px;
   height: 42px;
@@ -114,8 +114,7 @@ div {
 
   position: absolute;
   background-image: url("../graphics/ball.png");
-  top: calc(var(--y) * 1px);
-  left: calc(var(--x) * 1px);
+  transform: translate(calc(var(--x) * 1px), calc(var(--y) * 1px));
 
   width: 20px;
   height: 20px;
@@ -167,7 +166,7 @@ div {
 
   position: absolute;
   background-image: url("../graphics/pow.png");
-  top: calc(var(--y) * 1px);
+  transform: translateY(calc(var(--y) * 1px));
 }
 /* ------------------------------- storyline ------------------------------ */
 .storyContainer {
