--- a/src/style.css
+++ b/src/style.css
@@ -99,14 +99,10 @@ div {
 
 .paddle {
   --x: 0;
-  
+
   position: absolute;
   background-image: url("../graphics/paddle.png");
-  /* bottom: 28px; */
-  /* width: 200px; */
-  /* height: 42px; */
   transform: translate(calc(var(--x) * 1px));
-
 }
 .ball {
   --x: 0;
@@ -115,9 +111,6 @@ div {
   position: absolute;
   background-image: url("../graphics/ball.png");
   transform: translate(calc(var(--x) * 1px), calc(var(--y) * 1px));
-
-  width: 20px;
-  height: 20px;
   border-radius: 50%;
 }
 
@@ -131,6 +124,7 @@ div {
   background-image: url("../graphics/ball.png");
   width: 20px;
   height: 20px;
+  background-position: -10px 0px;
   border-radius: 50%;
   margin-left: 10px;
 }
